--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,6 @@ ACCESS_TOKEN_EXPIRE_MINUTES=30
 
 DB_USER_NAME=postgres
 DB_USER_PASSWORD=postgres
-DB_HOST=localhost
+DB_HOST=postgres
 DB_PORT=5432
 DB_NAME=postgres
