--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,14 @@ services:
       env_file:
         - .env
       environment:
-        POSTGRES_USER: ${DB_USER_NAME}
-        POSTGRES_PASSWORD: ${DB_USER_PASSWORD}
-        POSTGRES_DB: ${DB_NAME}
-        POSTGRES_PORT: ${DB_PORT}
+        POSTGRES_USER: $[DB_USER_NAME]
+        POSTGRES_PASSWORD: $[DB_USER_PASSWORD]
+        POSTGRES_DB: $[DB_NAME]
+        POSTGRES_PORT: $[DB_PORT]
       ports:
-        - "${DB_PORT}:${DB_PORT}"
+        - "$[DB_PORT]:$[DB_PORT]"
       healthcheck:
-        test: [ "CMD-SHELL", "sh -c 'pg_isready -U ${DB_USER_NAME} -d ${DB_NAME}'" ]
+        test: [ "CMD-SHELL", "sh -c 'pg_isready -U $[DB_USER_NAME] -d $[DB_NAME]'" ]
         interval: 3s
         timeout: 3s
         retries: 5
@@ -34,4 +34,4 @@ services:
       environment:
         DATABASE_HOST: postgres
       ports:
-        - "${PORT}:${PORT}"
+        - "$[PORT]:$[PORT]"
